--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -47,6 +47,10 @@ Kameda/Scene.cpp:
     .data: [0x80394b70, 0x80394b88]
     .sdata2: [0x80418e78, 0x80418e90]
 
+Kaneshige/HioMgr.cpp:
+    .text: [0x801a6960, 0x801a6c30]
+    .data: [0x80395bb8, 0x80395bc8]
+
 Kaneshige/KartInfo.cpp:
     .text: [0x801a8844, 0x801a8f54]
     .rodata: [0x803770f8, 0x80377378]    
