--- a/config/dol_slices.yml
+++ b/config/dol_slices.yml
@@ -53,20 +53,31 @@ Kaneshige/HioMgr.cpp:
 
 Kaneshige/KartInfo.cpp:
     .text: [0x801a8844, 0x801a8f54]
+    #.ctors: [0x80316274, 0x80316278]
     .rodata: [0x803770f8, 0x80377378]    
     .data: [0x80395bf0, 0x80395c98]
+    #.bss: [0x803ca7c8, 0x803ca7f8]
     .sdata2: [0x80419dc8, 0x80419dd0]
 
 Kaneshige/KartChecker.cpp:
-    .text: [0x801a9040, 0x801ac4b4]   
+    .text: [0x801a9040, 0x801ac4b4]  
+    #.ctors: [0x80316278, 0x0x8031627c] 
     .rodata: [0x80377378, 0x80377640] 
     .data: [0x80395c98, 0x80395cd8]
+    #.bss: [0x803ca7f8, 0x803ca828]
     .sdata: [0x80414618, 0x80414628]
     .sbss: [0x804163a0, 0x804163a8]
     .sdata2: [0x80419dd0, 0x80419e18]
 
 #Kaneshige/RaceMgr.cpp:
-    #.text: [0x801ac5a0, 0x801ad064]
+    #.text: [0x801ac5a0, 0x801ad164]
+    #.ctors: [0x8031627c, 0x80316280]
+    #.rodata: [0x80377640, 0x803780c0]
+    #.data: [0x80395cd8, 0x80395cf8]
+    #.bss: [0x803ca828, 0x803ca858] 
+    #.sdata: [0x80414628, 0x80414630]
+    #.sbss: [0x804163a8, 0x804163b0]
+    #.sdata2: [0x80419e18, 0x80419f88]
 
 Kaneshige/ScrnShot.cpp:
     .text: [0x801b4764, 0x801b4860]
@@ -74,6 +85,7 @@ Kaneshige/ScrnShot.cpp:
 
 Kaneshige/RaceInfo.cpp:
     .text: [0x801b5098, 0x801b5e14] # excludes __sinit_RaceInfo_cpp and __dt__8RaceInfoFv
+    #.ctors: [0x8031628c, 0x80316290]
     .rodata: [0x80378500, 0x80378698]    
     .data: [0x80395e08, 0x80395e30]
     #.bss: [0x803ca8e8, 0x803ca928]
